--- a/TranspoLink/appsettings.json
+++ b/TranspoLink/appsettings.json
@@ -6,14 +6,21 @@
     }
   },
   "AllowedHosts": "*",
-  
+
   // SMTP Settings
   "Smtp": {
-    "User": "bait2173.email@gmail.com",
+    "User": "transpolink@gmail.com",
     "Pass": "ncom fsil wjzk ptre",
-    "Name": "🐱 Super Admin",
+    "Name": "TranspoLink SDN BHD",
     "Host": "smtp.gmail.com",
     "Port": 587
+  },
+
+  "AppSettings": {
+    "PhotoMaxSizeMB": 1,
+    "AllowedPhotoTypes": [ "jpeg", "jpg", "png" ],
+    "DefaultAvatar": "/images/add_photo.png",
+    "PhotosFolder": "photos"
   }
 }
 
