--- a/TranspoLink/appsettings.json
+++ b/TranspoLink/appsettings.json
@@ -9,8 +9,8 @@
 
   // SMTP Settings
   "Smtp": {
-    "User": "transpolink@gmail.com",
-    "Pass": "ncom fsil wjzk ptre",
+    "User": "wmstest88@gmail.com",
+    "Pass": "edwl icoj bkym qxrd",
     "Name": "TranspoLink SDN BHD",
     "Host": "smtp.gmail.com",
     "Port": 587
