--- a/TranspoLink/appsettings.json
+++ b/TranspoLink/appsettings.json
@@ -9,8 +9,8 @@
 
   // SMTP Settings
   "Smtp": {
-    "User": "wmstest88@gmail.com",
-    "Pass": "edwl icoj bkym qxrd",
+    "User": "transpolink2000@gmail.com",
+    "Pass": "kupl axhm uwfk kvqt",
     "Name": "TranspoLink SDN BHD",
     "Host": "smtp.gmail.com",
     "Port": 587
@@ -20,7 +20,7 @@
     "PhotoMaxSizeMB": 1,
     "AllowedPhotoTypes": [ "jpeg", "jpg", "png" ],
     "DefaultAvatar": "/images/add_photo.png",
-    "PhotosFolder": "photos"
+    "PhotosFolder": "images"
   }
 }
 
