google login wohoooo

--- a/TranspoLink/appsettings.json
+++ b/TranspoLink/appsettings.json
@@ -7,6 +7,13 @@
   },
   "AllowedHosts": "*",
 
+  "Authentication": {
+    "Google": {
+      "ClientId": "1064737099999-54q9ecgg2n7kf8jr8h5alfm6ooehbv7b.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
+  },
+
   // SMTP Settings
   "Smtp": {
     "User": "transpolink2000@gmail.com",
